; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/extr_vmm.c_vm_get_memseg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/extr_vmm.c_vm_get_memseg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm = type { %struct.mem_seg* }
%struct.mem_seg = type { i64, i32, i32 }

@VM_MAX_MEMSEGS = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vm_get_memseg(%struct.vm* %0, i32 %1, i64* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.vm*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.mem_seg*, align 8
  store %struct.vm* %0, %struct.vm** %7, align 8
  store i32 %1, i32* %8, align 4
  store i64* %2, i64** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load i32, i32* %8, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %5
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @VM_MAX_MEMSEGS, align 4
  %18 = icmp sge i32 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %15, %5
  %20 = load i32, i32* @EINVAL, align 4
  store i32 %20, i32* %6, align 4
  br label %52

21:                                               ; preds = %15
  %22 = load %struct.vm*, %struct.vm** %7, align 8
  %23 = getelementptr inbounds %struct.vm, %struct.vm* %22, i32 0, i32 0
  %24 = load %struct.mem_seg*, %struct.mem_seg** %23, align 8
  %25 = load i32, i32* %8, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.mem_seg, %struct.mem_seg* %24, i64 %26
  store %struct.mem_seg* %27, %struct.mem_seg** %12, align 8
  %28 = load i64*, i64** %9, align 8
  %29 = icmp ne i64* %28, null
  br i1 %29, label %30, label %35

30:                                               ; preds = %21
  %31 = load %struct.mem_seg*, %struct.mem_seg** %12, align 8
  %32 = getelementptr inbounds %struct.mem_seg, %struct.mem_seg* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64*, i64** %9, align 8
  store i64 %33, i64* %34, align 8
  br label %35

35:                                               ; preds = %30, %21
  %36 = load i32*, i32** %10, align 8
  %37 = icmp ne i32* %36, null
  br i1 %37, label %38, label %43

38:                                               ; preds = %35
  %39 = load %struct.mem_seg*, %struct.mem_seg** %12, align 8
  %40 = getelementptr inbounds %struct.mem_seg, %struct.mem_seg* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = load i32*, i32** %10, align 8
  store i32 %41, i32* %42, align 4
  br label %43

43:                                               ; preds = %38, %35
  %44 = load i32*, i32** %11, align 8
  %45 = icmp ne i32* %44, null
  br i1 %45, label %46, label %51

46:                                               ; preds = %43
  %47 = load %struct.mem_seg*, %struct.mem_seg** %12, align 8
  %48 = getelementptr inbounds %struct.mem_seg, %struct.mem_seg* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 4
  %50 = load i32*, i32** %11, align 8
  store i32 %49, i32* %50, align 4
  br label %51

51:                                               ; preds = %46, %43
  store i32 0, i32* %6, align 4
  br label %52

52:                                               ; preds = %51, %19
  %53 = load i32, i32* %6, align 4
  ret i32 %53
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
